infra/rds.tf
# -------------------------
# DB SUBNET GROUP (REQUIRED)
# -------------------------
resource "aws_db_subnet_group" "default" {
  name = "main-db-subnet-group"

  subnet_ids = [
    aws_subnet.private_1.id,
    aws_subnet.private_2.id
  ]

  tags = {
    Name = "db-subnet-group"
  }
}

# -------------------------
# RDS INSTANCE (PRIVATE)
# -------------------------
resource "aws_db_instance" "db" {
  identifier = "terraform-db"

  allocated_storage = 20
  engine            = "mysql"
  engine_version    = "8.0"

  instance_class = "db.t3.micro"

  db_name  = "mydatabase"
  username = var.db_username
  password = var.db_password

  db_subnet_group_name   = aws_db_subnet_group.default.name
  vpc_security_group_ids = [aws_security_group.rds_sg.id]

  publicly_accessible = false # 🔒 makes it PRIVATE

  skip_final_snapshot = true

  tags = {
    Name = "terraform-rds"
  }
}
